# SnapClean

./: .gitignore  .snapclean.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
snapclean/: cli.py  core.py
